# python-hw-kravchuk-zakhar

./: .gitignore
hw1/: README.md  nl.py  tail.py  tests.py  wc.py
hw2/: Dockerfile  README.md  generate_pdf.py  pyproject.toml  result.tex
hw2/latexgen/: __init__.py  image.py  table.py
hw3/: task_3_1.py  task_3_2.py  task_3_3.py
hw3/artifacts/3_1/: matrix+.txt
hw3/artifacts/3_2/: matrix*.txt  matrix@.txt
hw3/artifacts/3_3/: C.txt  CD.txt  hash.txt
hw3/matrix_lib/: __init__.py  base.py  cached.py  mixins.py  ndarray.py
hw4/: README.md  task_4_1.py  task_4_2.py  task_4_3.py
hw4/artifacts/: 4_1_results.txt  4_2_results.txt  4_3_interaction.txt
hw5/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  task_5_1.py  task_5_2.py  task_5_3.py
