[build-system]
requires = ["setuptools>=61.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "latexgen-zakr600"
version = "0.1.0"
description = "Functional LaTeX generator"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Zakhar Kravchuk" }
]

[tool.setuptools]
packages = ["latexgen"]
